# Lab6

./: CMakeLists.txt  Controller.h  Document.h  Primitive.h  main.cpp
.github/workflows/: release.yml
